[project]
name = "protligand"
version = "0.1.0"
description = "Project for Protein-Ligand analysis and ML"
authors = [
    {name = "teddywristh", email = "ericwristhwinslow@gmail.com"}
]
readme = "README.md"
# Sửa lại dải Python để tương thích với Torch/Triton và Python 3.13 hiện tại của bạn
requires-python = ">=3.12,<3.15"

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.5.0",
    "rdkit>=2023.9.1",
    "biopython>=1.81",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "plotly>=5.18.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=24.0.0",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.0"
]